# TinySubMake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: Player.xml
src/: main.cpp
